fixed the alignment of the canvas

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ body {
     position: fixed;
     background: #333;
     margin: 0;
+    width: 100vw;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -43,6 +44,7 @@ button {
 
 .controls {
     padding: 5px;
+    padding-top: 20px;
 
     &__color {
         color: transparent;
